# TelegramRag

./: README.md  Task.md  pyproject.toml
data/: ai.json  ai_product.json
src/: bot.py  config.py
src/services/: __init__.py  data_service.py  rag_service.py
src/utils/: __init__.py  parser.py
